adding markdown cells with headlines and explanations

--- a/Olivieri_Project.ipynb
+++ b/Olivieri_Project.ipynb
@@ -1,12 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Analysis and Classification of Political Tweets\n",
+    "\n",
+    "Previous research has shown that the outcome of a political campaign [correlates positively with the campaign’s social media interaction](https://doi.org/10.1371/journal.pone.0079449). The more “favorites” and “retweets” a campaign gets, the better the candidate does. In this sense, Twitter can be used as source for polling data. Analyzing the amount of interaction on Twitter might predict who will win the race.\n",
+    "\n",
+    "The political climate in 2018 is different than the political climate of 2013, the last time this was studied. So far, 2018's special elections, have not supported this theory. One possible reason is the outsized media attention paid to otherwise typically ignored races.\n",
+    "\n",
+    "This project will use the NLTK word tokenizer and TFIDF transformer, as well as Multinomial Naive Bayes and Support Vector Machine models to predict winning and losing campaigns. Text documents (tweets) from 10 campaigns for special elections were analyzed and compared to four upcoming campaigns to predict the outcome."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
+    "# These are commented out because they take a long time to load.\n",
+    "# If you run this notebook and it throws errors regarding these libraries\n",
+    "# uncomment these lines.\n",
     "# !conda install --yes --prefix {sys.prefix} tweepy\n",
     "# !conda install --yes --prefix {sys.prefix} textblob\n",
     "# !conda install --yes --prefix {sys.prefix} twython"
@@ -14,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +51,7 @@
        "'%.2f'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,11 +77,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data\n",
+    "\n",
+    "The Twitter timelines of 14 campaigns (10 already held and 4 upcoming) were extracted using my [Twitter sentiment analysis project](https://github.com/oxenfree/TwitterSentimentAnalysis). 500 tweets from each timeline were gathered: the tweet text, date and time of posting, as well as how many retweets and favorites were recorded to CSV file.\n",
+    "\n",
+    "The text of each tweet was cleaned by regex, removing “@” and “#” symbols, as well as common Twitter artifacts such as “RT: “. This pre-processing removed possible stumbling-blocks to sentiment analysis.\n",
+    "\n",
+    "Next the NLTK Sentiment Analyzer was used to add probabilities of sentiment to each text. Each text document can contain all three probabilities: positive, neutral, and negative. The probabilities (pos, neu, neg) were added to the dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These lists are used throughout the code below, but are also good \n",
+    "# reminders of which candidate is where, if they won, etc.\n",
     "won = ['JimmyGomezCA', 'JamesThompsonKS', 'karenhandel', 'RalphNorman', 'GregForMontana']\n",
     "lost = ['AhnforCA34', 'LauraforKansas', 'ossoff', 'Archie4Congress', 'RobQuistforMT']\n",
     "upcoming = ['realScottWagner', 'WolfForPA', 'AndrewGillum', 'RonDeSantisFL']\n",
@@ -159,6 +192,15 @@
     "loss_counts['win_loss'] = 'lost'\n",
     "wl_counts = win_counts.merge(loss_counts, how='outer')\n",
     "wl_long = pd.melt(wl_counts, 'win_loss', var_name='count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis and Visualization of Favorites and Retweets\n",
+    "\n",
+    "Previous research suggests that the number of likes and retweets each candidate receives can predict their success in the race. In 2018, this hasn't been the case. Most likely due to the outsized amount of national attention these smaller races have garnered. "
    ]
   },
   {
@@ -273,6 +315,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis and Visualization of Sentiment\n",
+    "\n",
+    "Each Tweet from each candidate was then analyzed for sentiment. Density plots for negative and positive sentiment shows very little difference between candidates that won their race versus candidates that lost. A density plot is very similar to a histogram, the plot shows the distribution of negative sentiment per tweet text. Since the NLTK Sentiment Analyzer shows a probability for each sentiment, if winning or losing tweet texts were either more positive or negative, one of these plots would be shifted to the right. \n",
+    "\n",
+    "For example, if losing candidated tweeted negative sentiment more often, the distribution peak would be shifted further rightward along the x axis.\n",
+    "\n",
+    "These plots show almost no difference in sentiment between those who have lost and those who have won."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -342,6 +397,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Density Plot by State\n",
+    "\n",
+    "Just to visualize some more sentiment by density plot, here's one for positive sentiment per state."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -398,6 +462,17 @@
     "lost_df['win_loss'] = 0\n",
     "lost_df['label'] = 'l'\n",
     "wl_df = won_df.merge(lost_df, how='outer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classifying Campaign Outcome by Text Analysis\n",
+    "\n",
+    "Two machine learning models were created and trained on the “won” and “lost” dataframes, using the cleaned tweet texts. First, pipelines were built for the Multinomial Naïve Bayes and Support Vector Machine (SVM) algorithms. The pipelines used the NTLK Count Vectorizer and the TFIDF Transformer. Parameters for the algorithms such as ngram range, whether to use stop words or not, and “min df” (minimum number of word matches to add to the TFIDF transformer) were then fed into the pipelines using the Grid Search Cross Validation with a cross-validation parameter set to “3”.\n",
+    "\n",
+    "The Grid Search Cross Validation then chooses the best set of parameters to use when fitting the model to the training data. The best model for both SVM and MNB, predicted the class as either 1 (won) or 0 (lost) at an overall accuracy of around 80%. Multinomial Naïve Bayes performed slightly better with recall of the 0 (losing) class, while SVM performed slightly better with precision of the 1 (winning) class.\n"
    ]
   },
   {
@@ -591,6 +666,13 @@
     "    'Scott Wagner, PA Gov': {'df': scott_pa},\n",
     "    'Tom Wolf, PA Gov': {'df': tom_pa},\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same pipeline and cross-validation process and training data can be used to fit these models again. Instead of testing against a hold-out subset of training data, the tweet texts for upcoming elections was used. Since the label “won” corresponds with the class “1”, a prediction was made by simply summing the number of tweets with “winning” type texts. "
    ]
   },
   {
@@ -917,11 +999,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "A small subset of election campaign tweets, only special elections held in a politically atypical year, showed that twitter interaction (favorites and retweets) did not predict well the outcome of these elections. Similarly, analysis of sentiment, using NLTK Sentiment Analyzer, showed very little difference between winning and losing campaigns. \n",
+    "\n",
+    "Using a word tokenizer and TFIDF transformer showed that machine learning models could accurately predict the classification of “winning” and “losing” campaigns based on text analysis. These models could then predict upcoming elections. \n",
+    "\n",
+    "However, this analysis is just another resource for campaign and political prediction. Like polls and pundit analysis, all predictions are likely to be wrong. For example, Tom Wolf is the current governor of Pennsylvania. He has the advantage of incumbency and he has been [polling much better than Scott Wagner](https://realclearpolitics.com/epolls/2018/governor/pa/pennsylvania_governor_wagner_vs_wolf-6542.html). It is unlikely that Wagner will overturn Wolf in November’s elections. Combined with other sources, this text analysis can likely be a good tool for political predictions.\n"
+   ]
   }
  ],
  "metadata": {
